--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -39,6 +39,7 @@
     "limits.h": "c",
     "unistd.h": "c",
     "fcntl.h": "c",
-    "stdlib.h": "c"
+    "stdlib.h": "c",
+    "get_next_line_bonus.h": "c"
   }
 }
